Update card_finder.java